--- a/app/src/main/res/layout/item_row_covidhospital.xml
+++ b/app/src/main/res/layout/item_row_covidhospital.xml
@@ -18,7 +18,7 @@
         android:padding="15dp">
 
         <TextView
-            android:id="@+id/tv_item_idProv"
+            android:id="@+id/tv_item_hospitalName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textColor="#404258"
@@ -32,25 +32,49 @@
             tools:text="@tools:sample/full_names" />
 
         <TextView
-            android:id="@+id/tv_item_prov"
+            android:id="@+id/tv_item_hospitalAddress"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
             android:textColor="#0096FF"
             android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@+id/tv_item_idProv"
-            app:layout_constraintTop_toBottomOf="@+id/tv_item_idProv"
+            app:layout_constraintStart_toStartOf="@+id/tv_item_hospitalName"
+            app:layout_constraintTop_toBottomOf="@+id/tv_item_hospitalName"
             tools:text="@tools:sample/full_names" />
 
         <TextView
-            android:id="@+id/tv_item_bed_avaibility"
+            android:id="@+id/tv_item_bed_availability"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="4dp"
+            android:layout_marginBottom="12dp"
+            android:text="Bed Availability : "
             android:textColor="#0096FF"
             android:textSize="12sp"
-            app:layout_constraintStart_toStartOf="@+id/tv_item_prov"
-            app:layout_constraintTop_toBottomOf="@+id/tv_item_prov"
-            android:text="Bed Availability"/>
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/tv_item_hospitalAddress"
+            app:layout_constraintTop_toBottomOf="@+id/tv_item_hospitalAddress" />
+
+        <TextView
+            android:id="@+id/tv_item_bed_availability_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#5800FF"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/tv_item_bed_availability"
+            app:layout_constraintStart_toEndOf="@+id/tv_item_bed_availability"
+            tools:text="0" />
+
+        <TextView
+            android:id="@+id/tv_item_bed_update"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#0096FF"
+            android:textSize="10sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            tools:text="Diupdate 14 jam yang lalu" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
