--- a/app/src/main/res/layout/item_row_noncovidhospital.xml
+++ b/app/src/main/res/layout/item_row_noncovidhospital.xml
@@ -43,40 +43,16 @@
             tools:text="@tools:sample/full_names" />
 
         <TextView
-            android:id="@+id/tv_item_bed_availability"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="12dp"
-            android:text="Bed Availability : "
-            android:textColor="#0096FF"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/tv_item_hospitalAddress"
-            app:layout_constraintTop_toBottomOf="@+id/tv_item_hospitalAddress" />
-
-        <TextView
-            android:id="@+id/tv_item_bed_availability_number"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#5800FF"
-            android:textSize="14sp"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="@+id/tv_item_bed_availability"
-            app:layout_constraintStart_toEndOf="@+id/tv_item_bed_availability"
-            tools:text="0" />
-
-        <TextView
             android:id="@+id/tv_item_bed_update"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
+            android:text="Click for the detail"
             android:textColor="#0096FF"
-            android:textSize="13sp"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_item_bed_availability"
-            tools:text="Diupdate 14 jam yang lalu" />
+            app:layout_constraintTop_toBottomOf="@+id/tv_item_hospitalAddress" />
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.cardview.widget.CardView>
