--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_1000">#B01E68</color>
+    <color name="Green">#3CDF37</color>
+    <color name="yellow">#EADA52</color>
+    <color name="red">#F44336</color>
 </resources>
